--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1 {
     width: 50%;
     margin-left: 25%;
     margin-top: 100%;
+    margin-bottom: 10%;
     text-align: center;
     color: white;
     font-family: "Libre Baskerville", serif;
